Renaming + adaptations